update base packages to new versions