@@ -1,9 +1,11 @@
 package edu.zut.cs.javaee.dream.base.service;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -12,17 +14,13 @@ import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.transaction.annotation.Transactional;
 
 import edu.zut.cs.javaee.dream.base.BaseAbstractTestCase;
-import edu.zut.cs.javaee.dream.base.domain.BaseEntityDomain;
+import edu.zut.cs.javaee.dream.base.domain.BaseEntity;
 
-
-
-@ContextConfiguration(locations = {
-		"classpath:/applicationContextTest-resources.xml",
-		"classpath:/applicationContext-dao.xml",
-		"classpath:/applicationContext-service.xml" })
+@ContextConfiguration(locations = { "classpath:/applicationContextTest-resources.xml",
+		"classpath:/applicationContext-dao.xml", "classpath:/applicationContext-service.xml" })
 @RunWith(value = SpringJUnit4ClassRunner.class)
 @Transactional
-public abstract class GenericManagerTestCase<PK extends Serializable, T extends BaseEntityDomain, M extends GenericManager<T, PK>>
+public abstract class GenericManagerTestCase<PK extends Serializable, T extends BaseEntity, M extends GenericManager<T, PK>>
 		extends BaseAbstractTestCase {
 
 	protected T entity;
@@ -30,9 +28,9 @@ public abstract class GenericManagerTestCase<PK extends Serializable, T extends 
 	protected List<T> list;
 
 	/**
-	 * A simple logger
+	 * Logger for this class
 	 */
-	protected final Logger log = Logger.getLogger(this.getClass());
+	final Logger logger = LogManager.getLogger(this.getClass().getName());
 
 	protected M manager;
 
@@ -44,7 +42,7 @@ public abstract class GenericManagerTestCase<PK extends Serializable, T extends 
 
 	@Before
 	public void setUp() throws Exception {
-		this.entity = this.persistentClass.newInstance();
+		this.entity = this.persistentClass.getDeclaredConstructor().newInstance();
 
 	}
 
@@ -52,17 +50,29 @@ public abstract class GenericManagerTestCase<PK extends Serializable, T extends 
 	public void testSave() {
 		if (this.entity == null) {
 			try {
-				this.entity = this.persistentClass.newInstance();
+				this.entity = this.persistentClass.getDeclaredConstructor().newInstance();
+				this.entity = this.manager.save(this.entity);
 			} catch (InstantiationException e) {
 				// TODO Auto-generated catch block
 				e.printStackTrace();
 			} catch (IllegalAccessException e) {
 				// TODO Auto-generated catch block
 				e.printStackTrace();
+			} catch (IllegalArgumentException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			} catch (InvocationTargetException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			} catch (NoSuchMethodException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			} catch (SecurityException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
 			}
 		}
 
-		this.entity = this.manager.save(this.entity);
 	}
 
 }
